e2e-test/src/snapshots/federation_e2e_tests__snapshots__duckdb_explain_analyze.snap
---
source: e2e-test/src/snapshots.rs
description: "EXPLAIN ANALYZE SELECT id, name FROM measurements WHERE id > 1 ORDER BY id"
---
SchemaCastScanExec, metrics=[output_rows=2, elapsed_compute=[TIME], output_bytes=[BYTES], output_batches=0]
  CooperativeExec, metrics=[]
    VirtualExecutionPlan name=duckdb_e2e compute_context=duckdb_e2e base_sql=SELECT "measurements"."id", "measurements"."name" FROM "measurements" WHERE ("measurements"."id" > 1) ORDER BY "measurements"."id" ASC NULLS LAST, metrics=[]
      RemotePlan: PROJECTION rows=2 timing=[TIME] projections=__internal_decompress_integral_bigint(#0, 1), __internal_decompress_string(#1) estimated cardinality=0, metrics=[]
        RemotePlan: ORDER_BY rows=2 timing=[TIME] order by=memory.main.measurements.id ASC, metrics=[]
          RemotePlan: PROJECTION rows=2 timing=[TIME] projections=__internal_compress_integral_utinyint(#0, 1), __internal_compress_string_ubigint(#1) estimated cardinality=1, metrics=[]
            RemotePlan: SEQ_SCAN  rows=2 timing=[TIME] table=measurements type=Sequential Scan projections=id, name filters=id>1 estimated cardinality=1, metrics=[]
