e2e-test/src/snapshots/federation_e2e_tests__snapshots__duckdb_explain_indent.snap
---
source: e2e-test/src/snapshots.rs
description: "EXPLAIN SELECT id, name FROM measurements WHERE id > 1 ORDER BY id"
---
Federated
 Sort: measurements.id ASC NULLS LAST
  Projection: measurements.id, measurements.name
    Filter: measurements.id > Int64(1)
      TableScan: measurements
SchemaCastScanExec
  CooperativeExec
    VirtualExecutionPlan name=duckdb_e2e compute_context=duckdb_e2e base_sql=SELECT "measurements"."id", "measurements"."name" FROM "measurements" WHERE ("measurements"."id" > 1) ORDER BY "measurements"."id" ASC NULLS LAST
      RemotePlan: PROJECTION projections=__internal_decompress_integral_bigint(#0, 1), __internal_decompress_string(#1) estimated cardinality=0
        RemotePlan: ORDER_BY order by=memory.main.measurements.id ASC
          RemotePlan: PROJECTION projections=__internal_compress_integral_utinyint(#0, 1), __internal_compress_string_ubigint(#1) estimated cardinality=1
            RemotePlan: SEQ_SCAN  table=measurements type=Sequential Scan projections=id, name filters=id>1 estimated cardinality=1
