e2e-test/src/snapshots/federation_e2e_tests__snapshots__duckdb_explain_pgjson.snap
---
source: e2e-test/src/snapshots.rs
description: "EXPLAIN FORMAT PGJSON SELECT id, name FROM measurements WHERE id > 1 ORDER BY id"
---
[
  {
    "Plan": {
      "Node Type": "Federated",
      "Detail": "Federated\n Sort: measurements.id ASC NULLS LAST\n  Projection: measurements.id, measurements.name\n    Filter: measurements.id > Int64(1)\n      TableScan: measurements",
      "Plans": [],
      "Output": [
        "id",
        "name"
      ]
    }
  }
]
