e2e-test/src/snapshots/federation_e2e_tests__snapshots__sqlite_explain_analyze.snap
---
source: e2e-test/src/snapshots.rs
description: "EXPLAIN ANALYZE SELECT id, name FROM measurements WHERE id > 1 ORDER BY id"
---
SchemaCastScanExec, metrics=[output_rows=2, elapsed_compute=[TIME], output_bytes=[BYTES], output_batches=0]
  CooperativeExec, metrics=[]
    VirtualExecutionPlan name=sqlite_e2e compute_context=sqlite_e2e base_sql=SELECT `measurements`.`id`, `measurements`.`name` FROM `measurements` WHERE (`measurements`.`id` > 1) ORDER BY `measurements`.`id` ASC NULLS LAST, metrics=[]
      RemotePlan: SCAN detail=measurements, metrics=[]
