e2e-test/src/snapshots/federation_e2e_tests__snapshots__sqlite_explain_indent.snap
---
source: e2e-test/src/snapshots.rs
description: "EXPLAIN SELECT id, name FROM measurements WHERE id > 1 ORDER BY id"
---
Federated
 Sort: measurements.id ASC NULLS LAST
  Projection: measurements.id, measurements.name
    Filter: measurements.id > Int64(1)
      TableScan: measurements
SchemaCastScanExec
  CooperativeExec
    VirtualExecutionPlan name=sqlite_e2e compute_context=sqlite_e2e base_sql=SELECT `measurements`.`id`, `measurements`.`name` FROM `measurements` WHERE (`measurements`.`id` > 1) ORDER BY `measurements`.`id` ASC NULLS LAST
      RemotePlan: SCAN detail=measurements
